Add CSS Flexbox + getReadableSize.js

--- a/src/app/create/index.html
+++ b/src/app/create/index.html
@@ -7,8 +7,7 @@
 </head>
 
 <body>
-	<message-form action="/">
-	</message-form>
+	<message-form class="chat" action="/"></message-form>
 </body>
 
 </html>
