--- a/src/lib/components/form/-input/shadow.css
+++ b/src/lib/components/form/-input/shadow.css
@@ -2,9 +2,10 @@ input {
 	border: 0;
 	outline: none;
 	width: calc(100% - 2px);
+	background-color: transparent;
 }
 
 :host {
 	display: inline-block;
-	border: 1px solid rgba(25, 25, 25, 0.32);
+	border: 2px solid rgba(25, 25, 25, 0.32);
 }
