Change structure of HTML files + add messageList  (with bug)

--- a/src/app/create/index.html
+++ b/src/app/create/index.html
@@ -7,7 +7,10 @@
 </head>
 
 <body>
-	<message-form class="chat" action="/"></message-form>
+	<div class="chat">
+		<form class="message-list"></form>
+		<message-form action="/"></message-form>
+	</div>
 </body>
 
 </html>
