Add messages with styles + files functionality + Drag&Drop + geolocation

--- a/src/app/create/index.html
+++ b/src/app/create/index.html
@@ -8,7 +8,7 @@
 
 <body>
 	<div class="chat">
-		<form class="message-list"></form>
+		<!--<form class="message-list"></form>-->
 		<message-form action="/"></message-form>
 	</div>
 </body>
