HW3 fix CustomEvent

--- a/src/lib/components/message-form/shadow.css
+++ b/src/lib/components/message-form/shadow.css
@@ -24,15 +24,17 @@
 }
 
 .message-from {
-	float: right;
+	/* float: right; */
 	color: blue;
 	background-color: transparent;
+	flex-direction: row;
 }
 
 .message-to {
-	float: left;
+	/* float: left; */
 	color: black;
 	background-color: transparent;
+	flex-direction: row-reverse;
 }
 
 input[type=submit] {
