ESLint  all fixed + left/right messages!

--- a/src/app/create/shadow.css
+++ b/src/app/create/shadow.css
@@ -1,5 +1,8 @@
+@import url(https://fonts.googleapis.com/css?family=Play);
+
 body {
-  background-color: #86f0d0;
+	background-color: #86f0d0;
+	font-family: 'Play', sans-serif;
 }
 
 .chat {
