--- a/src/lib/components/message-form/shadow.css
+++ b/src/lib/components/message-form/shadow.css
@@ -4,34 +4,48 @@
 	position: relative;
 	height: calc(97vh - 66px);
 	width: calc(100% - 2px);
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 
 .message {
 	color: rgba(25, 25, 25, 0.32);
 	font-size: 3vh;
-	background: ghostwhite;
 	border-radius: 10px;
 	border: 1px solid;
 	box-sizing: border-box;
-	padding-left: 0.5em;
-	padding-right: 0.5em;
+	/* padding-left: 0.5em;
+	padding-right: 0.5em; */
 	width: fit-content;
 	margin: 2px;
-	padding: 3px;
+	padding: 5px;
 	clear: both;
 	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
 }
 
-.message-from {
-	float: right;
-	color: blue;
+.to {
+	border-color: grey;
+	align-self: flex-start;
+	background: #ddd;
+}
+
+.from {
+	border-color: lightblue;
+	align-self: flex-end;
+	background: #08f;
+}
+
+
+.text-from {
+	color: white;
 	background-color: transparent;
 }
 
-.message-to {
-	float: left;
+.text-to {
 	color: black;
+	background-color: transparent;
+}
+
+.file-from {
 	background-color: transparent;
 }
 
