--- a/src/components/Chat/MessageList/MessageList.css
+++ b/src/components/Chat/MessageList/MessageList.css
@@ -2,15 +2,15 @@
   display: flex;
   flex-direction: column;
 
-  position: absolute;
+  /* position: absolute;
   top: 0px;
-  left: 0px;
+  left: 0px; */
 
-  height: calc(100% - 5vh);
+  /* height: calc(100% - 5vh); */
   width: 100%;
 
   overflow-x: hidden;
   overflow-y: scroll;
 
-  background-color: #86f0d0;
+  background-color: transparent;
 }
