HW6: <div> to <ul><li> changed

--- a/src/components/Chat/MessageList/MessageList.css
+++ b/src/components/Chat/MessageList/MessageList.css
@@ -2,6 +2,9 @@
   display: flex;
   flex-direction: column;
 
+  margin: 0;
+  padding: 0;
+
   /* position: absolute;
   top: 0px;
   left: 0px; */
