--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,12 +1,14 @@
 .header {
   width: 100%;
-  padding: 7vh 7vh;
+  padding: 2vh 2vh;
   box-sizing: border-box;
   border-radius: 2vh;
-  background-color: #000000;
+  background: lightgrey;
+  border-radius: 2vh;
+  border: 1px solid rgba(25, 25, 25, 0.32);
 }
 
 .home-button {
-  height: 5vh;
+  /*height: 5vh;*/
   width: auto;
 }
