--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,11 +1,10 @@
 .header {
   width: 100%;
-  padding: 2vh 2vh;
+  padding: 4vh 4vh;
   box-sizing: border-box;
   border-radius: 2vh;
-  background: lightgrey;
-  border-radius: 2vh;
   border: 1px solid rgba(25, 25, 25, 0.32);
+  background: grey;
 }
 
 .home-button {
