--- a/src/components/Chat/MessageForm/ExtrasButton/styles.module.css
+++ b/src/components/Chat/MessageForm/ExtrasButton/styles.module.css
@@ -15,14 +15,46 @@
   cursor: pointer;
 
   transition: filter 0.1s linear;
+
+  border-radius: 50%;
+  animation: pulse 1.7s infinite;
 }
 
 .extras-button:hover {
   -webkit-filter: drop-shadow(0px 0px 7px rgba(0, 0, 0, 0.2));
   filter: drop-shadow(0px 0px 7px rgba(0, 0, 0, 0.2));
+  animation: none;
 }
 
 .extras-button:active {
   -webkit-filter: drop-shadow(0px 0px 7px rgba(0, 0, 0, 0.4));
   filter: drop-shadow(0px 0px 7px rgba(0, 0, 0, 0.4));
+  animation: none;
+}
+
+@-webkit-keyframes pulse {
+  0% {
+    -webkit-box-shadow: 0 0 0 0 rgba(39, 174, 96, 0.4);
+  }
+  70% {
+    -webkit-box-shadow: 0 0 0 10px rgba(39, 174, 96, 0);
+  }
+  100% {
+    -webkit-box-shadow: 0 0 0 0 rgba(39, 174, 96, 0);
+  }
+}
+
+@keyframes pulse {
+  0% {
+    -moz-box-shadow: 0 0 0 0 rgba(39, 174, 96, 0.4);
+    box-shadow: 0 0 0 0 rgba(39, 174, 96, 0.4);
+  }
+  70% {
+    -moz-box-shadow: 0 0 0 10px rgba(39, 174, 96, 0);
+    box-shadow: 0 0 0 10px rgba(39, 174, 96, 0);
+  }
+  100% {
+    -moz-box-shadow: 0 0 0 0 rgba(39, 174, 96, 0);
+    box-shadow: 0 0 0 0 rgba(39, 174, 96, 0);
+  }
 }
